# FishTracker

./: .copier-answers.yml  .gitignore  .pre-commit-config.yaml  README.md  RESTRUCTURE_PLAN.md  background_subtractor.py  batch_dialog.py  batch_track.py  batch_track_cli.py  collapsible_box.py  detection_list.py  detector.py  detector_parameters.py  detector_parameters_view.py  dropdown_delegate.py  echogram_widget.py  file_handler.py  filter_parameters.py  fish_list.py  fish_manager.py  image_manipulation.py  log_object.py  mog_parameters.py  output_widget.py  parameter_list.py  parameters_base.py  playback_manager.py  polar_transform.py  pyproject.toml  save_manager.py  shell.nix  sonar_widget.py  sort.py  track_process.py  tracker.py  tracker_parameters.py  tracker_parameters_view.py  user_preferences.py  zoomable_qlabel.py
.github/workflows/: Dockerfile  pre-commit.yml  zizmor.yml
assets/experimental_tracker/: test.py
configs/: default.yaml  example.default.yaml
experimental_tracker/: test.py  track.py  tracker.py
file_handlers/: beamLookUp.py  utils.py
file_handlers/MP4/: mp4_file_info.py
file_handlers/v3/: v3_file_info.py  v3_frame_info.py
file_handlers/v4/: v4_file_info.py  v4_frame_info.py
file_handlers/v5/: v5_file_headers_info.json  v5_file_info.py  v5_frame_headers_info.json  v5_frame_info.py  v5_unittest.py
fishtracker/core/detection/: background_subtractor.py  detector.py
fishtracker/core/file_handlers/: utils.py
fishtracker/core/fish/: fish_list.py  fish_manager.py
fishtracker/core/processing/: batch_track.py  track_process.py
fishtracker/core/tracking/: tracker.py
fishtracker/managers/: playback_manager.py  ui_manager.py  user_preferences.py
fishtracker/parameters/: detector_parameters.py  filter_parameters.py  mog_parameters.py  parameter_list.py  parameters_base.py  tracker_parameters.py
fishtracker/ui/delegates/: dropdown_delegate.py
fishtracker/ui/dialogs/: batch_dialog.py
fishtracker/ui/icons/: iconsLauncher.py
fishtracker/ui/views/: tracker_parameters_view.py  (+1 more)
fishtracker/utils/: file_handler.py  polar_transform.py  save_manager.py
tests/: test_filter_parameters.py
(+12 files in other folders)
